tests/errors/ty_var_err/ty_var_err.c
#error ty_var_err:7:11 Type mismatch: 'int' <> 'string'.
